# cargo-featomatic

./: Cargo.toml
src/: cli.rs  features.rs  main.rs  util.rs
