[package]
name = "cargo-featomatic"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]

[dependencies]
cargo = "0.15"
rustc-serialize = "0.3"
itertools = "0.5"
clap = "2.31.2"
notify-rust = { version = "*", optional = true }

[features]
default = []
empty0 = []
empty1 = []
empty2 = []
meta0 = ["empty1", "empty2"]
meta1 = ["empty1", "empty2", "meta0"]
external = ["notify-rust"]
